--- a/a_rtchat/templates/a_rtchat/chat.html
+++ b/a_rtchat/templates/a_rtchat/chat.html
@@ -56,10 +56,10 @@
         <div class="sticky bottom-0 z-10 p-2 bg-gray-800">
             <div class="flex flex-col gap-4 items-center rounded-xl px-2 py-2">
                 <form id="chat_message_form" class="w-full"
-                    hx-ext="ws"
-                    ws-connect="/ws/chatroom/{{ chatroom_name }}"
-                    ws-send 
-                    _="on htmx:wsAfterSend reset() me">
+                    hx-post="{% url 'home' %}"
+                    hx-target="#chat_messages"
+                    hx-swap="beforeend"
+                    _="on htmx:afterRequest reset() me">
                     {% csrf_token %}
                     {{ form }}
                 </form>
